--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -60,7 +60,7 @@
   
 .infoicon {
     color: var(--cor-primaria);
-    font-size: 20px;
+    font-size: 18px;
     transition: transform 0.3s ease;
     flex-shrink: 0;
 }
@@ -75,9 +75,12 @@
     }
 }
 
-@media (max-width: 1450px) {
+@media (max-width: 1460px) {
+    .infos p span {
+        padding: 0;
+    }
     .infos p {
-        font-size: 16px;
+        font-size: 15px;
     }
 }
 
@@ -87,7 +90,7 @@
     }
 }
 
-@media (max-width: 1150px) {
+@media (max-width: 1160px) {
     .infos {
         padding: 24px 20px;
         gap: 20px;
